# pokeplatinum

./: .gitignore  anim_dump.py  meson.build
asm/macros/: aicmd.inc  movement.inc  pokemon_anim_cmd.inc  scrcmd.inc
include/: debug_game_start.h  field_move_tasks.h  game_start.h  map_object.h  npc_trade_task.h  player_avatar.h  pokedex.h  pokemon.h  string_list.h  unk_0200762C.h  unk_020655F4.h  unk_02094EDC.h
include/battle/: ov16_0223DF00.h
include/constants/: debug_menu.h  map_object.h  pokemon.h
include/data/: map_headers.h
include/overlay005/: const_ov5_021FB470.h  (+13 more)
platinum.us/: filesys.csv  filesys.sha1  main.lsf  rom.rsf
res/: meson.build
res/field/props/models/: map_prop_models.order  meson.build  prop_models.order
src/: berry_patch_graphics.c  debug_game_start.c  field_map_change.c  field_menu.c  field_move_tasks.c  game_options.c  game_start.c  hall_of_fame_entries.c  item.c  map_object.c  map_object_move.c  menu.c  meson.build  npc_trade_task.c  platform_lift.c  player_avatar.c  pokedex.c  pokemon.c  pokemon_icon.c  pokemon_summary_app.c  render_window.c  scrcmd.c  scrcmd_item.c  start_menu.c  touch_screen.c  unk_0200762C.c  unk_02015F84.c  unk_0203D1B8.c  unk_0204F13C.c  unk_02054884.c  unk_0205A0D8.c  unk_0205F180.c  unk_020655F4.c  unk_02067A84.c  unk_0207070C.c  unk_0207AE68.c  unk_02083370.c  unk_02094EDC.c  unk_020989DC.c  unk_020EDBAC.c
tutorials/: allow-deleting-hms.md  change-default-options.md  change-starters.md  edit-shiny-odds.md  nature-colors.md  repel-reuse-prompt.md  reusable-tms.md  summary-evs-ivs.md  toggle-auto-run.md
(+294 files in other folders)
